<resources>
    <string name="app_name">Github API Repositories</string>
    <string name="repository_name">%s</string>
    <string name="author">Author: %s</string>
    <string name="issue_title">Title: %s</string>
    <string name="stars">Stars: %s</string>
    <string name="forks">Forks: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repository_score">Score: %.2f</string>
    <string name="repository_watchers">Watchers: %s</string>
    <string name="repository_open_issues">Open issues: %s</string>
    <string name="repository_stars">Stars: %s</string>
    <string name="repository_commit_created_date">%s</string>
    <string name="repository_acess_commit_btn">Access commit</string>
    <string name="license_title">%s</string>
    <string name="title_home">Home</string>
    <string name="input_label_search">Search</string>
    <string name="info_text">Sem licenças por aqui...</string>
</resources>