<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="10dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/issue_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/issue_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/repository_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/author"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/issue_title" />

        <TextView
            android:id="@+id/issue_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="State: %s:"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/repository_author"
            app:layout_constraintStart_toStartOf="@id/repository_author"
            app:layout_constraintTop_toBottomOf="@id/repository_author" />

        <TextView
            android:id="@+id/repository_btn_acess_issue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="Access issue"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/issue_state"
            app:layout_constraintStart_toStartOf="@id/issue_state"
            app:layout_constraintTop_toBottomOf="@id/issue_state" />

        <TextView
            android:id="@+id/repository_issue_created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/repository_commit_created_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/repository_btn_acess_issue"
            app:layout_constraintStart_toStartOf="@id/repository_btn_acess_issue"
            app:layout_constraintTop_toBottomOf="@id/repository_btn_acess_issue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>